fix <a> tag className order

--- a/view/nav.html
+++ b/view/nav.html
@@ -1,6 +1,6 @@
 		<nav id="main-navbar">
 			<div id="nav-brand-wrap">
-				<a href="/" class="nav-brand">
+				<a class="nav-brand" href="/">
 					<img id="brand-logo" src="resource/img/logo.png" alt="三三吾鄉皂 Trisoap">
 				</a>
 			</div>
