--- a/view/manage_ui/nav/nav_item.html
+++ b/view/manage_ui/nav/nav_item.html
@@ -63,38 +63,43 @@
                     </li>
                     <li class="nav-main-item has-dropdown">
                         <a class="nav-main-link" href="javascript:void(0)">
-                            折扣管理
+                            商品管理
                             <i class="fa fa-angle-down"></i>
                         </a>
                         <ul class="nav-dropdown-menu">
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount">
-                                    折扣一覽
+                                <a class="nav-main-link" href="index.php?route=item">
+                                    商品一覽
                                 </a>
                             </li>
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=create">
-                                    新增折扣
+                                <a class="nav-main-link" href="index.php?route=item&in=create">
+                                    新增商品
                                 </a>
                             </li>
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=delete">
-                                    刪除折扣
+                                <a class="nav-main-link" href="index.php?route=item&in=edit">
+                                    更新商品
                                 </a>
                             </li>
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=state0">
-                                    已失效折扣
+                                <a class="nav-main-link" href="index.php?route=item&in=offshelf">
+                                    下架商品
                                 </a>
                             </li>
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=state1">
-                                    一次有效折扣
+                                <a class="nav-main-link" href="index.php?route=item&in=onshelf">
+                                    上市商品
                                 </a>
                             </li>
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=state2">
-                                    永久有效折扣
+                                <a class="nav-main-link" href="index.php?route=item&in=replenish">
+                                    商品進貨
+                                </a>
+                            </li>
+                            <li class="nav-dropdown-item">
+                                <a class="nav-main-link" href="index.php?route=item&in=sell">
+                                    商品出貨
                                 </a>
                             </li>
                         </ul>
