--- a/view/manage_ui/nav/nav_manager.html
+++ b/view/manage_ui/nav/nav_manager.html
@@ -63,38 +63,23 @@
                     </li>
                     <li class="nav-main-item has-dropdown">
                         <a class="nav-main-link" href="javascript:void(0)">
-                            折扣管理
+                            權限管理
                             <i class="fa fa-angle-down"></i>
                         </a>
                         <ul class="nav-dropdown-menu">
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount">
-                                    折扣一覽
+                                <a class="nav-main-link" href="index.php?route=manager">
+                                    管理員一覽
                                 </a>
                             </li>
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=create">
-                                    新增折扣
+                                <a class="nav-main-link" href="index.php?route=manager&in=create">
+                                    新增管理員
                                 </a>
                             </li>
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=delete">
-                                    刪除折扣
-                                </a>
-                            </li>
-                            <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=state0">
-                                    已失效折扣
-                                </a>
-                            </li>
-                            <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=state1">
-                                    一次有效折扣
-                                </a>
-                            </li>
-                            <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=state2">
-                                    永久有效折扣
+                                <a class="nav-main-link" href="index.php?route=manager&in=delete">
+                                    刪除管理員
                                 </a>
                             </li>
                         </ul>
