--- a/view/manage_ui/nav/nav_member.html
+++ b/view/manage_ui/nav/nav_member.html
@@ -1,6 +1,6 @@
         <nav id="main-navbar">
             <div id="nav-brand-wrap">
-                <a class="nav-brand" href="/">
+                <a href="/" class="nav-brand">
                     <img id="brand-logo" src="resource/img/logo.png" alt="三三吾鄉皂 Trisoap">
                 </a>
             </div>
@@ -57,44 +57,6 @@
                             <li class="nav-dropdown-item">
                                 <a class="nav-main-link" href="index.php?route=order&in=create">
                                     建立訂單
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-main-item has-dropdown">
-                        <a class="nav-main-link" href="javascript:void(0)">
-                            折扣管理
-                            <i class="fa fa-angle-down"></i>
-                        </a>
-                        <ul class="nav-dropdown-menu">
-                            <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount">
-                                    折扣一覽
-                                </a>
-                            </li>
-                            <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=create">
-                                    新增折扣
-                                </a>
-                            </li>
-                            <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=delete">
-                                    刪除折扣
-                                </a>
-                            </li>
-                            <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=state0">
-                                    已失效折扣
-                                </a>
-                            </li>
-                            <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=state1">
-                                    一次有效折扣
-                                </a>
-                            </li>
-                            <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=state2">
-                                    永久有效折扣
                                 </a>
                             </li>
                         </ul>
