--- a/view/manage_ui/nav/nav_order.html
+++ b/view/manage_ui/nav/nav_order.html
@@ -63,38 +63,38 @@
                     </li>
                     <li class="nav-main-item has-dropdown">
                         <a class="nav-main-link" href="javascript:void(0)">
-                            折扣管理
+                            訂單管理
                             <i class="fa fa-angle-down"></i>
                         </a>
                         <ul class="nav-dropdown-menu">
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount">
-                                    折扣一覽
+                                <a class="nav-main-link" href="index.php?route=order">
+                                    訂單一覽
                                 </a>
                             </li>
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=create">
-                                    新增折扣
+                                <a class="nav-main-link" href="index.php?route=order&in=stateE">
+                                    待執行訂單
                                 </a>
                             </li>
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=delete">
-                                    刪除折扣
+                                <a class="nav-main-link" href="index.php?route=order&in=stateR">
+                                    執行中訂單
                                 </a>
                             </li>
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=state0">
-                                    已失效折扣
+                                <a class="nav-main-link" href="index.php?route=order&in=state1">
+                                    缺貨中訂單
                                 </a>
                             </li>
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=state1">
-                                    一次有效折扣
+                                <a class="nav-main-link" href="index.php?route=order&in=stateC">
+                                    已完成訂單
                                 </a>
                             </li>
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=discount&in=state2">
-                                    永久有效折扣
+                                <a class="nav-main-link" href="index.php?route=order&in=stateF">
+                                    強制結束訂單
                                 </a>
                             </li>
                         </ul>
