--- a/view/manage_ui/discount_delete.html
+++ b/view/manage_ui/discount_delete.html
@@ -1,6 +1,14 @@
-        <div class="sign-block">
-            <h1>刪除折扣</h1>
-            <input type="text" id="index" placeholder="折扣兌換碼">
-            <button class="promise" onclick="discountDelete()">確定</button>
-            <a href="index.php?route=discount"><button class="cancel">取消</button></a>
-        </div>
+        <main>
+	        <div class="main-wrap">
+	            <h2>刪除折扣</h2>
+	            <div class="delete-div">
+                    <div>
+                    	<label for="index">折扣兌換碼</label>
+			            <input type="text" id="index">
+			        </div>
+			        <div>
+			        	<button class="promise-btn" onclick="discountDelete()">確定</button>
+	    		        <a class="neural-btn" href="index.php?route=discount">取消</a>
+			        </div>
+	        </div>
+		</main>
