--- a/view/manage_ui/discount_state_2.html
+++ b/view/manage_ui/discount_state_2.html
@@ -1,81 +1,23 @@
-        <nav class="navbar navbar-fixed-top nav-custom">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a href="#page-top" class="navbar-brand"><img src="resource/image/logo.png" alt="" class="logo"></a>
-                </div>
-                <div class="collapse navbar-collapse navbar-main-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="index.php">
-                                回三三首頁<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=discount&in=create">
-                                新增折扣<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=discount&in=delete">
-                                刪除折扣<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=discount&in=state0">
-                                已失效折扣<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=discount&in=state1">
-                                一次有效折扣<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=discount&in=state2">
-                                永久有效折扣<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                [member_name]，您好<br>
-                            </a>
-                        </li>
-                        <li>
-                            <a onclick="memberLogout()">
-                                登出<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                    </ul>
+        <main>
+            <div class="main-wrap">
+                <div class="data-retrieval">
+                    <h2>永久有效折扣</h2>
+                    <table class="rwd-table">
+                        <thead>
+                            <tr>
+                                <th>折扣兌換碼</th>
+                                <th>折扣名稱</th>
+                                <th>折扣金額</th>
+                                <th>折扣狀態</th>
+                                <th>設定人員</th>
+                                <th>建立日期</th>
+                                <th>最近使用日期</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            [discountView2]
+                        </tbody>
+                    </table>
                 </div>
             </div>
-        </nav>
-
-        <section>
-            <div class="container">
-                <h2>永久有效折扣</h2>
-                <div class="manage">
-                    <div class="row table-responsive">
-                        <div class="tab-content">
-                            <div id="all" class="tab-pane fade in active">
-                                <table class="table table-hover">
-                                    <thead>
-                                        <tr>
-                                            <td>折扣兌換碼</td>
-                                            <td>折扣名稱</td>
-                                            <td>折扣金額</td>
-                                            <td>折扣狀態</td>
-                                            <td>設定人員</td>
-                                            <td>建立日期</td>
-                                            <td>最近使用日期</td>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                    [discountView2]
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        </main>
