update template for manage_ui/item pages

--- a/view/manage_ui/item.html
+++ b/view/manage_ui/item.html
@@ -1,84 +1,22 @@
-        <nav class="navbar navbar-fixed-top nav-custom">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a href="#page-top" class="navbar-brand"><img src="resource/image/logo.png" alt="" class="logo"></a>
-                </div>
-                <div class="collapse navbar-collapse navbar-main-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="index.php">
-                                回三三首頁<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=item&in=create">
-                                新增商品<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=item&in=edit">
-                                更新商品<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=item&in=offshelf">
-                                下架商品<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=item&in=onshelf">
-                                上市商品<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=item&in=replenish">
-                                商品進貨<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=item&in=sell">
-                                商品出貨<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                [member_name]，您好<br>
-                            </a>
-                        </li>
-                        <li>
-                            <a onclick="memberLogout()">
-                                登出<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                    </ul>
+        <main>
+            <div class="main-wrap">
+                <div class="data-retrieval">
+                    <h2>商品一覽</h2>
+                    <table class="rwd-table">
+                        <thead>
+                            <tr>
+                                <td>商品編號</td>
+                                <td>商品名稱</td>
+                                <td>商品數量</td>
+                                <td>商品價格</td>
+                                <td>商品描述</td>
+                                <td>商品狀態</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            [itemShow]
+                        </tbody>
+                    </table>
                 </div>
             </div>
-        </nav>
-        <section>
-            <div class="container">
-                <h2>商品管理</h2>
-                <div class="manage">
-                    <div class="row table-responsive">
-                        <div class="tab-content">
-                            <div id="all" class="tab-pane fade in active">
-                                <table class="table table-hover">
-                                    <thead>
-                                        <tr>
-                                            <td>商品編號</td>
-                                            <td>商品名稱</td>
-                                            <td>商品數量</td>
-                                            <td>商品價格</td>
-                                            <td>商品描述</td>
-                                            <td>商品狀態</td>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                    [itemShow]
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        </main>
