--- a/view/manage_ui/manager_delete.html
+++ b/view/manage_ui/manager_delete.html
@@ -1,6 +1,15 @@
-        <div class="sign-block" style="width: 450px;">
-        	<h1>刪除管理員</h1>
-    		欲刪除之管理員信箱：<input type="text" id="target"><br>
-    		<button class="promise" onclick="managerDelete()">確定</button>
-    		<a href="index.php?route=manager"><button class="cancel">取消</button></a>
-    	</div>
+        <main>
+            <div class="main-wrap">
+                <h2>管理員刪除</h2>
+                <div class="create-div">
+                    <div>
+                        <label for="target">欲刪除管理員信箱</label>
+                        <input type="email" id="target" class="form-field">
+                    </div>
+                    <div>
+                        <button class="promise-btn" onclick="managerDelete()">確定</button>
+                        <a class="neural-btn" href="index.php?route=manager">取消</a>
+                    </div>
+                </div>
+            </div>
+        </main>
