set appropriate input types

--- a/view/manage_ui/discount_create.html
+++ b/view/manage_ui/discount_create.html
@@ -1,6 +1,6 @@
         <main>
             <div class="main-wrap">
-                <h2>新增折扣</h2>
+                <h2>折扣新增</h2>
                 <div class="create-div">
                     <div>
                         <label for="name">折扣名稱</label>
@@ -8,7 +8,7 @@
                     </div>
                     <div>
                         <label for="price">折扣金額</label>
-                        <input type="text" id="price" class="form-field">
+                        <input type="number" id="price" class="form-field">
                     </div>
                     <div>
                         <label for="mode">折扣狀態</label>
