--- a/view/manage_ui/discount_delete.html
+++ b/view/manage_ui/discount_delete.html
@@ -1,6 +1,6 @@
         <main>
 	        <div class="main-wrap">
-	            <h2>刪除折扣</h2>
+	            <h2>折扣刪除</h2>
 	            <div class="delete-div">
                     <div>
                     	<label for="index">折扣兌換碼</label>
