--- a/view/manage_ui/item_create.html
+++ b/view/manage_ui/item_create.html
@@ -12,11 +12,11 @@
                     </div>
                     <div>
                         <label for="amount">商品數量</label>
-                        <input type="text" id="amount" class="form-field">
+                        <input type="number" id="amount" class="form-field">
                     </div>
                     <div>
                         <label for="price">商品價格</label>
-                        <input type="text" id="price" class="form-field">
+                        <input type="number" id="price" class="form-field">
                     </div>
                     <div>
                         <label for="description">商品描述</label>
