--- a/view/manage_ui/item_sell.html
+++ b/view/manage_ui/item_sell.html
@@ -31,7 +31,7 @@
                     </div>
                     <div>
                         <label for="amount">出貨數量</label>
-                        <input type="text" id="amount" class="form-field">
+                        <input type="number" id="amount" class="form-field">
                     </div>
                     <div>
                         <button class="promise-btn" onclick="itemSell()">確定</button>
