fix th (from td)

--- a/view/manage_ui/item.html
+++ b/view/manage_ui/item.html
@@ -5,12 +5,12 @@
                     <table class="rwd-table">
                         <thead>
                             <tr>
-                                <td>商品編號</td>
-                                <td>商品名稱</td>
-                                <td>商品數量</td>
-                                <td>商品價格</td>
-                                <td>商品描述</td>
-                                <td>商品狀態</td>
+                                <th>商品編號</th>
+                                <th>商品名稱</th>
+                                <th>商品數量</th>
+                                <th>商品價格</th>
+                                <th>商品描述</th>
+                                <th>商品狀態</th>
                             </tr>
                         </thead>
                         <tbody>
