--- a/view/manage_ui/manager.html
+++ b/view/manage_ui/manager.html
@@ -5,11 +5,11 @@
                     <table class="rwd-table">
                         <thead>
                             <tr>
-                                <td>電子信箱</td>
-                                <td>姓名</td>
-                                <td>電話</td>
-                                <td>地址</td>
-                                <td>帳號建立日期</td>
+                                <th>電子信箱</th>
+                                <th>姓名</th>
+                                <th>電話</th>
+                                <th>地址</th>
+                                <th>帳號建立日期</th>
                             </tr>
                         </thead>
                         <tbody>
