add className for css - form-field

--- a/view/manage_ui/discount.html
+++ b/view/manage_ui/discount.html
@@ -3,7 +3,7 @@
                 <div id="discount-search" class="search-div">
                     <div>
                         <label for="search-basis">搜尋依據</label>
-                        <select id="search-basis">
+                        <select id="search-basis" class="form-field">
                             <option value="DCTID">折扣兌換碼</option>
                             <option value="DCTNM">折扣名稱</option>
                             <option value="DCTPRICE">折扣金額</option>
