--- a/view/manage_ui/discount_create.html
+++ b/view/manage_ui/discount_create.html
@@ -12,7 +12,7 @@
                     </div>
                     <div>
                         <label for="mode">折扣狀態</label>
-                        <select id="mode">
+                        <select id="mode" class="form-field">
                             <option value="1">一次有效</option>
                             <option value="2">永久有效</option>
                         </select>
