--- a/view/manage_ui/member.html
+++ b/view/manage_ui/member.html
@@ -3,7 +3,7 @@
                 <div id="member-search" class="search-div">
                     <div>
                         <label for="search-basis">搜尋依據</label>
-                        <select id="search-basis">
+                        <select id="search-basis" class="form-field">
                             <option value="EMAIL">電子信箱</option>
                             <option value="CUSNM">客戶姓名</option>
                             <option value="TEL">聯絡電話</option>
