--- a/view/manage_ui/nav/nav_order.html
+++ b/view/manage_ui/nav/nav_order.html
@@ -51,12 +51,7 @@
                             </li>
                             <li class="nav-dropdown-item">
                                 <a class="nav-main-link" href="index.php?route=member">
-                                    查看客戶
-                                </a>
-                            </li>
-                            <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="index.php?route=order&in=create">
-                                    建立訂單
+                                    客戶管理
                                 </a>
                             </li>
                         </ul>
@@ -70,6 +65,11 @@
                             <li class="nav-dropdown-item">
                                 <a class="nav-main-link" href="index.php?route=order">
                                     訂單一覽
+                                </a>
+                            </li>
+                            <li class="nav-dropdown-item">
+                                <a class="nav-main-link" href="index.php?route=order&in=create">
+                                    建立訂單
                                 </a>
                             </li>
                             <li class="nav-dropdown-item">
