--- a/view/manage_ui/order.html
+++ b/view/manage_ui/order.html
@@ -1,95 +1,40 @@
-        <nav class="navbar navbar-fixed-top nav-custom">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a href="#page-top" class="navbar-brand"><img src="resource/image/logo.png" alt="" class="logo"></a>
-                </div>
-                <div class="collapse navbar-collapse navbar-main-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="index.php">
-                                回三三首頁<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=order&in=stateE">
-                                待執行訂單<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=order&in=stateR">
-                                執行中訂單<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=order&in=state1">
-                                缺貨中訂單<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=order&in=stateC">
-                                已完成訂單<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.php?route=order&in=stateF">
-                                強制結束訂單<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                [member_name]，您好<br>
-                            </a>
-                        </li>
-                        <li>
-                            <a onclick="memberLogout()">
-                                登出<i class="fa fa-angle-down" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-        <section>
-            <div class="orders">
-                    搜尋依據：<select id="key">
-                    <option value="ORDNO">訂單編號</option>
-                    <option value="EMAIL">顧客信箱</option>
-                    <option value="INVOICE">發票號碼</option>
-                    </select>
-                    搜尋關鍵：<input type="text" id="value"><br>
-                    <button onclick="orderSearch()">確定</button>
-            </div>
-        </section>
-
-        <section>
-            <div class="container">
-                <h2>訂單管理</h2>
-                <div class="manage">
-                    <div class="row table-responsive">
-                        <div class="tab-content">
-                            <div id="all" class="tab-pane fade in active">
-                                <table class="table table-hover">
-                                    <thead>
-                                        <tr>
-                                            <td>訂單編號</td>
-                                            <td>發票編號</td>
-                                            <td>缺貨狀態</td>
-                                            <td>訂單狀態</td>
-                                            <td>付款狀態</td>
-                                            <td>訂單總額</td>
-                                            <td>運費</td>
-                                            <td>實收金額</td>
-                                            <td>建立日期</td>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="orderShow">
-                                    [orderShow]
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
+        <main>
+            <div class="main-wrap">
+                <div id="discount-search" class="search-div">
+                    <div>
+                        <label for="search-basis">搜尋依據</label>
+                        <select id="search-basis">
+                            <option value="ORDNO">訂單編號</option>
+                            <option value="EMAIL">顧客信箱</option>
+                            <option value="INVOICE">發票號碼</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="search-value">搜尋關鍵</label>
+                        <input type="text" id="search-value" class="form-field">
+                        <button class="neural-btn" onclick="orderSearch()">確定</button>
                     </div>
                 </div>
+                <div class="data-retrieval">
+                    <h2>訂單一覽</h2>
+                    <table class="rwd-table">
+                        <thead>
+                            <tr>
+                                <th>訂單編號</th>
+                                <th>發票編號</th>
+                                <th>缺貨狀態</th>
+                                <th>訂單狀態</th>
+                                <th>付款狀態</th>
+                                <th>訂單總額</th>
+                                <th>運費</th>
+                                <th>實收金額</th>
+                                <th>建立日期</th>
+                            </tr>
+                        </thead>
+                        <tbody id="orderShow">
+                            [orderShow]
+                        </tbody>
+                    </table>
+                </div>
             </div>
-        </section>
+        </main>
