--- a/view/user_function/cart_content.html
+++ b/view/user_function/cart_content.html
@@ -1,5 +1,5 @@
                     <div class="sign-block">
-                        <table>
+                        <table class="rwd-table">
                             <thead>
                                 <tr>
                                     <th>商品名稱</th>
