fix logout function

--- a/view/manage_ui/nav/nav_discount.html
+++ b/view/manage_ui/nav/nav_discount.html
@@ -101,7 +101,7 @@
                         </a>
                         <ul class="nav-dropdown-menu">
                             <li class="nav-dropdown-item">
-                                <a class="nav-main-link" href="javascript:void(0)" onclick="memberLogout()">
+                                <a class="nav-main-link" href="index.php?operation=logout">
                                     登出
                                 </a>
                             </li>
