--- a/view/component/nav/login_member.html
+++ b/view/component/nav/login_member.html
@@ -25,7 +25,7 @@
 								</a>
 							</li>
 							<li class="nav-dropdown-item">
-								<a class="nav-main-link" href="#" onclick="memberLogout()">
+								<a class="nav-main-link" href="index.php?operation=logout">
 									登出
 								</a>
 							</li>
